Fix accessability font readability issues

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -146,8 +146,8 @@ code {
   border-radius: 6px;
   display: inline-block;
   font-family: "Courier New", "Courier", monospace;
-  -moz-font-feature-settings: "liga" off;
-  font-feature-settings: "liga" off;
+  -moz-font-feature-settings: "liga"off;
+  font-feature-settings: "liga"off;
   font-size: 16px;
   -moz-osx-font-smoothing: auto;
   -webkit-font-smoothing: subpixel-antialiased;
@@ -259,8 +259,10 @@ figcaption {
   color: $pink-200;
 }
 
-#teaser a {
+#teaser a,
+footer a {
   color: white;
+  border-bottom: 2px solid $pink-400;
 }
 
 #teaser a::after {
@@ -442,7 +444,4 @@ input:focus::placeholder {
     color: white;
   }
 
-  footer {
-    background: $blue-800;
-  }
 }
